--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ember-cli-babel": "^6.3.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.0.0",
+    "ember-cli-fastboot": "^1.0.5",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -36,6 +37,7 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
     "ember-welcome-page": "^3.0.0",
+    "liquid-fire": "^0.28.0",
     "loader.js": "^4.2.3"
   },
   "engines": {
